# turnip

./: .gitmodules  CMakeLists.txt  README.md  common.h  exception.cpp  main.cpp  mainwindow.cpp  mainwindow.h  turnip.pro  util.h
examples/: main.cpp
loader/: loader.cpp  loader.h  nca.cpp  nca.h  nsp.cpp  nsp.h
src/: common.cpp  common.h  exception.h  main.cpp  mainwindow.cpp  mainwindow.ui  util.cpp
ui/: filesystem_modal.cpp  filesystem_modal.h  filesystem_treeview.cpp  filesystem_treeview.h
vfs/: filesystem.cpp  filesystem.h
